# PUFFLE

./: .gitignore  .gitmodules  README.md  adult.ipynb  adult_2.ipynb  celeba.ipynb  celeba_distribution.ipynb  client.py  common.py  create_dataset.py  create_dataset_2.py  data.csv  dataset_utils.py  dutch.ipynb  dutch_distribution.ipynb  heatmap.ipynb  main.py  model_utils.py  mypy.ini  new_adult.ipynb  paper_dutch_pareto_frontier.ipynb  paper_dutch_results.ipynb  pareto_fronteer.ipynb  plots_distribution.ipynb  plots_dutch.py  pyproject.toml  study.ipynb  test.ipynb  test_with_celeba.py  utils.py
DPL copy/: RegularizationLoss.py  learning.py  main.py  requirements.txt  utils.py
DPL copy/Datasets/: celeba.py  color_mnist.py
DPL copy/Models/: celeba.py  color_model.py  mnist_model.py
DPL copy/Utils/: dataset_utils.py  model_utils.py  train_parameters.py  utils.py
Datasets/: celeba.py
Models/: celeba.py  cifar.py  mnist.py
Regularization/: DPL.py
experiments/celeba_paper/: baseline.yaml  baseline_IID.yaml  baseline_dp_5.yaml  baseline_dp_8.yaml  fixed_dp_5_t_0.04.yaml  fixed_dp_5_t_0.06.yaml  fixed_dp_5_t_0.09.yaml  fixed_dp_5_t_0.12.yaml  fixed_dp_5_t_0.15.yaml  fixed_dp_8_t_0.04.yaml  fixed_dp_8_t_0.06.yaml  fixed_dp_8_t_0.09.yaml  fixed_dp_8_t_0.12.yaml  fixed_dp_8_t_0.15.yaml  fixed_t_0.04.yaml  fixed_t_0.06.yaml  fixed_t_0.09.yaml  fixed_t_0.12.yaml  fixed_t_0.15.yaml  run_sweep_1.sh  temp_output.txt  tunable_dp_5_t_0.04.yaml  tunable_dp_5_t_0.06.yaml  tunable_dp_5_t_0.09.yaml  tunable_dp_5_t_0.12.yaml  tunable_dp_5_t_0.15.yaml  tunable_dp_8_t_0.04.yaml  tunable_dp_8_t_0.06.yaml  tunable_dp_8_t_0.09.yaml  tunable_dp_8_t_0.12.yaml  tunable_dp_8_t_0.15.yaml  tunable_t_0.04.yaml  tunable_t_0.06.yaml  tunable_t_0.09.yaml  tunable_t_0.12.yaml  tunable_t_0.15.yaml
experiments/dutch_paper/: baseline.yaml  baseline_dp_05.yaml  baseline_dp_1.yaml  fixed_dp_05_t_0.06.yaml  fixed_dp_05_t_0.08.yaml  fixed_dp_05_t_0.12.yaml  fixed_dp_05_t_0.18.yaml  fixed_dp_05_t_0.22.yaml  fixed_dp_1_t_0.06.yaml  fixed_dp_1_t_0.08.yaml  fixed_dp_1_t_0.12.yaml  fixed_dp_1_t_0.18.yaml  fixed_dp_1_t_0.22.yaml  fixed_t_0.06.yaml  fixed_t_0.08.yaml  fixed_t_0.12.yaml  run_sweep_1.sh  (+18 more)
fl_puf/: .privacy.sh.swp  50_balanced.sh  alpha.sh  celeba.ipynb  common.py  config.yaml  config_baseline.yaml  config_custom.yaml  config_fixed_lambda.yaml  config_no_privacy.yaml  dataset_disparity.ipynb  dataset_utils.py  epsilon.ipynb  estimation.sh  experiments.sh  main.py  main_scenarios.py  non_iid.sh  privacy.sh  reproducibility.sh  run_experiments.sh  run_sweep.sh  scenarios.sh  tabular.ipynb  tabular.sh  test.pt  test_lambda.sh  trainable_lambda.sh
notebooks/: adult.ipynb  celeba.ipynb  census.ipynb  dutch.ipynb  income_distribution.ipynb  new_adult.ipynb  paper_income.ipynb  study.ipynb
plots/: compute_disparities.py  outpuit.txt  plots.ipynb  plots_celeba.py  plots_income.py
puffle/: dataset_disparity.ipynb  distribution.ipynb  epsilon.ipynb  main.py  tabular.ipynb  test.sh  test_comparison.sh
test/: test_dataset_downloader.py  test_utils.py
(+394 files in other folders)
