[tool.poetry]
name = "fl_puf"
version = "0.1.0"
description = ""
authors = ["Luca Corbucci <lucorbucci@gmail.com>"]
readme = "README.md"
packages = [ { include = "fl_puf" } ]

[tool.poetry.dependencies]
python = "^3.8"
flwr = { git = "https://github.com/lucacorbucci/flower", extras = ["simulation"], branch="main" }
torch = "2.0.0"
torchvision = "^0.15.1"
wandb = "^0.14.0"
pytest = "^7.3.1"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
opacus = "^1.3.0"
DPL = { file = "./DPL/dist/dpl-0.1.0.post20-py3-none-any.whl" }
dill = "^0.3.6"
ruff = "^0.1.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[tool.ruff.isort]
case-sensitive = true
combine-as-imports = true

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true


